  * execute compiled binary in separate sub-directories for advanced caching. Also avoid concurrency issues should multiple user run the same instance at the same time.
  * log execution resources via /usr/bin/time (currently not displaying results)

v1.13
  * improved error reporting a little: 1) missing grammar plots are indicated via a static error image 2) exit status for each step are recorded and divs are colored orange if exit status is non-zero

v1.12
  * I've added two advanced options: 1) define the level of detail for plotting the grammar 2) activate outside grammar generation
  * plot-grammar results are now displayed as an additional tab + cache is sensitive to plot-grammar & outside_grammar flags

v1.11
  * enable static user content from ADP_collections
  * enable markdown comments in *.gap user files

v1.10
  * you can now globally define a directory into which all cache objects will be stored
  * the server now obtains the gapc version number at start up (and at every compile run) and add this into the globally defined cache prefix
    * same applies to fetching the ADP_collection commit hash to inform about the used version and the bellmanscafe commit hash
  * the name of the cache directory is no longer the algebra product, but the md5 hash of the algebra product
  * forwarding STDERR and STDOUT into according files while compiling. When executing, the contents is read and will be reported in the tab output. Thus, cache is really transparent for the user!
  * graphic generation of @Jasmin-Walter 's new plotting function is added.
  * allow user source files in an external directory, i.e. the path to the ADP_collection repo can also be specified globally
  * user selected instance, i.e. algebra product and grammar, are injected as an additional line to the gap file named bcafe in the cached version and always compile this instance.

v1.9
Internally moved css code to a separate file.